cargo_test.txt
   Compiling pq-xwing-kem v0.1.0 (C:\Users\chadm\Projects\pq-xwing-kem)
error[E0282]: type annotations needed
  --> tests\xwing_spec_test_vectors_deterministic.rs:49:110
   |
49 |     let (ct_m, ss_m): (libcrux_ml_kem::mlkem768::MlKem768Ciphertext, [u8; 32]) = encapsulate(&pk_m, *ml_rand.try_into().unwrap());
   |                                                                                                              ^^^^^^^^
   |
help: try using a fully qualified path to specify the expected types
   |
49 -     let (ct_m, ss_m): (libcrux_ml_kem::mlkem768::MlKem768Ciphertext, [u8; 32]) = encapsulate(&pk_m, *ml_rand.try_into().unwrap());
49 +     let (ct_m, ss_m): (libcrux_ml_kem::mlkem768::MlKem768Ciphertext, [u8; 32]) = encapsulate(&pk_m, *<&[u8] as TryInto<T>>::try_into(ml_rand).unwrap());
   |

For more information about this error, try `rustc --explain E0282`.
error: could not compile `pq-xwing-kem` (test "xwing_spec_test_vectors_deterministic") due to 1 previous error
